--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ Astro.response.headers.set("Cache-Control", `max-age=${import.meta.env.CACHING_M
 // console.log(await getContentTypes())
 ---
 
-<Layout title="DSSD Madison">
+<Layout title="DSSD GWU">
 	<main class="bg-[url('/index/bgPattern.png')]">
     <Welcome />
     <About />
