--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -11,7 +11,7 @@ Astro.response.headers.set(
 const projects = await getAllEntriesOfContentType('project');
 ---
 
-<Layout title="DSSD Madison - Projects">
+<Layout title="DSSD GWU - Projects">
     <main class="pt-28">
         <div class="container p-8 mx-auto space-y-8">
             {projects.map((project) => (
