--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,6 @@ Astro.response.headers.set("Cache-Control", `max-age=${import.meta.env.CACHING_M
     <About />
 		<Join />
     <Updates />
-		<Gallery />
+	<!-- 	<Gallery /> -->
 	</main>
 </Layout>
