adding research and blogs

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <div class="flex h-20 items-center justify-between px-5 py-3 md:px-10 border-t-2 border-zinc-900">
-  <p>© Copyright {new Date().getFullYear()} DSSD Madison</p>
+  <p>© Copyright {new Date().getFullYear()} DSSD GWU</p>
   <div>
     <a href="mailto:dssdmadison@dssdglobal.org" target="_blank"><img class="inline h-6" src="/people/email.svg" /></a>
     <a href="https://www.linkedin.com/company/dssdglobal/" target="_blank"><img class="inline h-6 pl-4" src="/people/linkedin.svg" /></a>
