--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ Astro.response.headers.set("Cache-Control", `max-age=${import.meta.env.CACHING_M
 ---
 
 <Layout title="DSSD GWU">
-	<main class="bg-[url('/index/bgPattern.png')]">
+	<main class="bg-[url('/index/bgPattern.jpg')]">
     <Welcome />
     <About />
 		<Join />
@@ -22,3 +22,4 @@ Astro.response.headers.set("Cache-Control", `max-age=${import.meta.env.CACHING_M
 	<!-- 	<Gallery /> -->
 	</main>
 </Layout>
+
