--- a/src/sections/Join.astro
+++ b/src/sections/Join.astro
@@ -5,19 +5,24 @@ import { getAllEntriesOfContentType } from "../services/contentful";
 const joinActions = await getAllEntriesOfContentType('getInvolvedSection');
 ---
 
-<HomeSection id="get-involved" title="Get Involved">
+
+<HomeSection id="get-involved" title="Get Involved" style="color: white">
   <div class="flex flex-col -mb-7 md:mb-0 md:flex-row md:justify-center">
     {joinActions.map((action) => {
       const { heading, text, path, image } = action.fields;
       return (
-        <a class="block relative text-white z-10 h-52 lg:h-72 aspect-square mx-4 mb-7 md:my-0" href={path} target="_blank">
-          <img src={"https:" + image.fields.file.url} class="absolute top-0 left-0 h-full w-full z-0 brightness-50 rounded shadow object-cover" />
-          <div class="absolute top-0 bottom-0 left-0 right-0 z-1 p-5 flex flex-col justify-center text-center hover:scale-[1.07] transition-all">
-            <h1 class="text-2xl font-bold pb-4">{heading}</h1>
-            <p>{text}</p>
+        <a class="block relative text-black z-10 h-52 lg:h-72 aspect-square mx-4 mb-7 md:my-0" href={path} target="_blank">
+          <div class="relative h-32 w-32 rounded overflow-hidden">
+            <div class="absolute top-0 left-0 w-full h-full z-0 brightness-50">
+              <img src={"https:" + image.fields.file.url} class="h-full w-full object-cover rounded opacity-50" />
+            </div>
+            <div class="absolute top-0 bottom-0 left-0 right-0 z-1 p-5 flex flex-col justify-center text-center hover:scale-[1.07] transition-all">
+              <h1 class="text-2xl font-bold pb-4 text-white">{heading}</h1>
+            </div>
           </div>
         </a>
       );
-      })}
+    })}
   </div>
 </HomeSection>
+
