--- a/src/pages/blogs.astro
+++ b/src/pages/blogs.astro
@@ -11,7 +11,7 @@ Astro.response.headers.set(
 const blogs = await getAllEntriesOfContentType('blog');
 ---
 
-<Layout title="DSSD GWU - Blog">
+<Layout title="DSSD GWU - Blogs">
     <main class="pt-28">
         <div class="container p-8 mx-auto space-y-8">
             {blogs.map((blog) => (
