removing get-involved

--- a/src/sections/Welcome.astro
+++ b/src/sections/Welcome.astro
@@ -11,7 +11,7 @@ const {description, file} = (await getAssetsByTitle("Welcome Image"))[0].fields;
         <h1 class="text-5xl p-4 text-gray-100 text-center">{description}</h1>
         <div class="text-center">
             <ActionButton href="/projects">Projects</ActionButton>
-            <ActionButton href="#get-involved">Get Involved</ActionButton>
+            <!-- <ActionButton href="#get-involved">Get Involved</ActionButton> -->
         </div>
     </div>
 </div>
