--- a/src/sections/Join.astro
+++ b/src/sections/Join.astro
@@ -4,10 +4,11 @@ import { getAllEntriesOfContentType } from "../services/contentful";
 
 const joinActions = await getAllEntriesOfContentType('getInvolvedSection');
 ---
+<!-- 
 
 
-<HomeSection id="get-involved" title="Get Involved" style="color: white">
-  <div class="flex flex-col -mb-7 md:mb-0 md:flex-row md:justify-center">
+ <HomeSection id="get-involved" title="Get Involved" style="color: white">
+<div class="flex flex-col -mb-7 md:mb-0 md:flex-row md:justify-center">
     {joinActions.map((action) => {
       const { heading, text, path, image } = action.fields;
       return (
@@ -23,6 +24,6 @@ const joinActions = await getAllEntriesOfContentType('getInvolvedSection');
         </a>
       );
     })}
-  </div>
-</HomeSection>
+  </div> 
+</HomeSection> -->
 
