--- a/src/components/people/PersonGroup.astro
+++ b/src/components/people/PersonGroup.astro
@@ -11,9 +11,9 @@ const sortedPeople = people.sort((a, b) => {
   const roleOrder = {
     chairperson: 0,
     project: 1,
-    research: 2,
+    "data science, research": 2,
     software: 3,
-    gis: 4,
+    gis: 4
   };
 
   const getRoleOrder = (person) => {
