get involved section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,10 +16,11 @@ Astro.response.headers.set("Cache-Control", `max-age=${import.meta.env.CACHING_M
 <Layout title="DSSD GWU">
 	<style>
 		.bg-pattern {
-		  background-image: url('/index/bgPattern.jpg');
-		  background-repeat: no-repeat;
+		  /* background-image: url('/index/bgPattern.jpg');
+		  background-repeat: no-repeat; */
 		  /* background-attachment: fixed; */
 		  /* background-size: cover;*/
+		  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 		  width:auto;
 		  height: auto; 
 		  background-size: 100% 100%;
