--- a/src/sections/Join.astro
+++ b/src/sections/Join.astro
@@ -31,7 +31,7 @@ const handleSubmit = async (event) => {
   const formData = { firstName, lastName, email, organization, details };
 
   try {
-    const response = 200
+    //const response.status = 200
     // const response = await fetch('/your-server-endpoint', {
     //   method: 'POST',
     //   headers: {
@@ -40,7 +40,7 @@ const handleSubmit = async (event) => {
     //   body: JSON.stringify(formData),
     // });
 
-    if (response.status === 200) {
+    // if (response.status === 200) {
       // Form submitted successfully, clear the fields
       firstName = "";
       lastName = "";
@@ -48,10 +48,10 @@ const handleSubmit = async (event) => {
       organization = "";
       details = "";
 
-      alert("Form submitted successfully!");
-    } else {
-      alert("There was an error submitting the form. Please try again later.");
-    }
+    //   alert("Form submitted successfully!");
+    // } else {
+    //   alert("There was an error submitting the form. Please try again later.");
+    // }
   } catch (error) {
     console.error("Error submitting form:", error);
     alert("There was an error submitting the form. Please try again later.");
@@ -321,32 +321,38 @@ textarea {
       <div class="left-side">
         <h1>Exploring the possibility to hiring GWU DSSD ?</h1>
         <h2>Connect with Us Today!</h2>
-        <form submit={handleSubmit}>
+        <!--submit={handleSubmit} -->
+        <form action="#">
           <div class="name-section">
             <div class="input-group">
               <label for="firstName">First Name*</label>
-              <input type="text" id="firstName" placeholder ="First Name" bind:value={firstName} required />
+              <!--bind:value={firstName} -->
+              <input type="text" id="firstName" placeholder ="First Name"  required />
             </div>
             <div class="input-group">
               <label for="lastName">Last Name*</label>
-              <input type="text" id="lastName" placeholder ="Last Name" bind:value={lastName} required />
+              <!-- bind:value={lastName} -->
+              <input type="text" id="lastName" placeholder ="Last Name"  required />
             </div>
           </div>
     
           <div class="email-organization-section">
             <div class="input-group">
               <label for="email">Email*</label>
-              <input type="email" id="email" placeholder ="Email " bind:value={email} required />
+              <!-- bind:value={email}  -->
+              <input type="email" id="email" placeholder ="Email " required />
             </div>
             <div class="input-group">
               <label for="organization">Organization*</label>
-              <input type="text" id="organization" placeholder ="Organization" bind:value={organization} required />
+              <!-- bind:value={organization}  -->
+              <input type="text" id="organization" placeholder ="Organization" required />
             </div>
           </div>
     
           <div class="input-group">
             <label for="details">Details*</label>
-            <textarea id="details" placeholder ="Details" bind:value={details} rows="4" cols="50" required></textarea>
+            <!-- bind:value={details}  -->
+            <textarea id="details" placeholder ="Details"  rows="4" cols="50" required></textarea>
           </div>
     
           <!-- Wrap the submit button in a div with the button-wrapper class -->
@@ -359,15 +365,14 @@ textarea {
     
       <div class="right-side">
         <div class="blue-link-container">
-          <img src="join.svg" alt="Sag Icon" class="blue-svg-icon">
+          <img src="get_involved_logos/join.svg" alt="Sag Icon" class="blue-svg-icon">
           <a href="https://docs.google.com/forms/d/1DIl0KWfWSiyIy0jj082k17dZENx4hT0LGsqBZws5M1k/edit" class="blue-link" target="_blank">
             <div class="main-link">Apply to Join</div>
             <p>Ready to Dive In? Apply Now and Make an Impact!</p>
           </a>
         </div>
-      
         <div class="blue-link-container">
-          <img src="blog_pitch.svg" alt="Sag Icon" class="blue-svg-icon">
+          <img src="get_involved_logos/blog_pitch.svg" alt="Sag Icon" class="blue-svg-icon">
           <a href="https://docs.google.com/forms/d/1JI-8vMogp36oakMxFhQPwNXmC4SJekCH8oxXXQKS-qE/edit" class="blue-link" target="_blank">
             <div class="main-link">Submit your Blog Pitch</div>
             <p>Let Your Voice Shine: Pitch Your Blog to the World!</p> 
@@ -375,7 +380,7 @@ textarea {
         </div>
       
         <div class="blue-link-container">
-          <img src="contact_mail.svg" alt="Sag Icon" class="blue-svg-icon">
+          <img src="get_involved_logos/contact_mail.svg" alt="Sag Icon" class="blue-svg-icon">
           <a href="mailto:gw@dssdglobal.org" class="blue-link">
             <div class="main-link">Contact Us</div>
             <p>Reach out and connect: Contact Our Team Today</p> 
