--- a/src/sections/Join.astro
+++ b/src/sections/Join.astro
@@ -319,7 +319,7 @@ textarea {
     })} -->
     <div class="container">
       <div class="left-side">
-        <h1>Exploring the possibility to hiring GWU DSSD ?</h1>
+        <h1>Exploring the possibility of hiring DSSD GW?</h1>
         <h2>Connect with Us Today!</h2>
         <!--submit={handleSubmit} -->
         <form action="#">
@@ -368,14 +368,14 @@ textarea {
           <img src="get_involved_logos/join.svg" alt="Sag Icon" class="blue-svg-icon">
           <a href="https://docs.google.com/forms/d/1DIl0KWfWSiyIy0jj082k17dZENx4hT0LGsqBZws5M1k/edit" class="blue-link" target="_blank">
             <div class="main-link">Apply to Join</div>
-            <p>Ready to Dive In? Apply Now and Make an Impact!</p>
+            <p>Apply Now and Make an Impact!</p>
           </a>
         </div>
         <div class="blue-link-container">
           <img src="get_involved_logos/blog_pitch.svg" alt="Sag Icon" class="blue-svg-icon">
           <a href="https://docs.google.com/forms/d/1JI-8vMogp36oakMxFhQPwNXmC4SJekCH8oxXXQKS-qE/edit" class="blue-link" target="_blank">
             <div class="main-link">Submit your Blog Pitch</div>
-            <p>Let Your Voice Shine: Pitch Your Blog to the World!</p> 
+            <p>Pitch Your Blog Idea!</p> 
           </a>
         </div>
       
@@ -383,7 +383,7 @@ textarea {
           <img src="get_involved_logos/contact_mail.svg" alt="Sag Icon" class="blue-svg-icon">
           <a href="mailto:gw@dssdglobal.org" class="blue-link">
             <div class="main-link">Contact Us</div>
-            <p>Reach out and connect: Contact Our Team Today</p> 
+            <p>Contact Our Team Today</p> 
           </a>
         </div>
       </div>
