changed the application link for fall 2024

--- a/src/sections/Join.astro
+++ b/src/sections/Join.astro
@@ -366,7 +366,7 @@ textarea {
       <div class="right-side">
         <div class="blue-link-container">
           <img src="get_involved_logos/join.svg" alt="Sag Icon" class="blue-svg-icon">
-          <a href="https://docs.google.com/forms/d/1DIl0KWfWSiyIy0jj082k17dZENx4hT0LGsqBZws5M1k/edit" class="blue-link" target="_blank">
+          <a href="https://forms.gle/i2KVQeYf9x5Jrye2A" class="blue-link" target="_blank">
             <div class="main-link">Apply to Join</div>
             <p>Apply Now and Make an Impact!</p>
           </a>
